# MessengerServer

./: .gitignore  .gitmodules  CMakeLists.txt
Cmake/: DepsInstall.cmake  Flags.cmake
Source/: CMakeLists.txt  main.cpp
Source/App/: MainWindow.cpp  MainWindow.h  StatusBarWidget.cpp  StatusBarWidget.h  main.cpp
Source/App/StatusBar/: StatusBarWidget.cpp  StatusBarWidget.h
Source/App/TabWidget/: TabWidget.cpp  TabWidget.h
Source/App/ToolBar/: ToolBarWidget.cpp  ToolBarWidget.h
Source/Server/: Server.cpp  Server.h
